--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 *.pyc
 *.sublime-workspace
 *.sublime-project
+/#mat.pyc#
+/examples/.ipynb_checkpoints/Gold SPR-checkpoint.ipynb
+/examples/Gold SPR.py
+/mat.py~
+/materials/.directory
+/misc.py
+/misc.py~
+/silk_crossllink.mat
