--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /misc.py
 /misc.py~
 /silk_crossllink.mat
+/.ipynb_checkpoints/numba test-checkpoint.ipynb
+/examples/cmd.txt
+/examples/.ipynb_checkpoints/Gold Circular Magnetic Dichroism-checkpoint.ipynb
+/examples/Gold Circular Magnetic Dichroism.py
+/numba test.ipynb
+/numba test.py
