--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.pyc
 *.sublime-workspace
 *.sublime-project
+.ipynb_checkpoints
+py_matrix/examples/.ipynb_checkpoints/*.ipynb
 /#mat.pyc#
-/examples/.ipynb_checkpoints/Gold SPR-checkpoint.ipynb
-/examples/Gold SPR.py
 /mat.py~
 /materials/.directory
 /misc.py
@@ -11,7 +11,5 @@
 /silk_crossllink.mat
 /.ipynb_checkpoints/numba test-checkpoint.ipynb
 /examples/cmd.txt
-/examples/.ipynb_checkpoints/Gold Circular Magnetic Dichroism-checkpoint.ipynb
-/examples/Gold Circular Magnetic Dichroism.py
-/numba test.ipynb
+/examples/numba test.ipynb
 /numba test.py
