- modified environment.yml - modified README.md in order to work with gitter

--- a/environment.yml
+++ b/environment.yml
@@ -1,176 +1,225 @@
 name: root
+channels: !!python/tuple
+- defaults
 dependencies:
-- _license=1.1=py34_1
-- abstract-rendering=0.5.1=np19py34_0
-- alabaster=0.7.6=py34_0
-- anaconda=2.3.0=np19py34_0
-- anaconda-client=1.1.2=py34_0
-- argcomplete=1.0.0=py34_1
-- astropy=1.0.4=np19py34_0
-- babel=2.1.1=py34_0
-- bcolz=0.11.3=py34_0
-- beautiful-soup=4.3.2=py34_0
-- binstar=0.12=2
-- bitarray=0.8.1=py34_0
-- blaze-core=0.8.3=py34_0
-- blz=0.6.2=np19py34_1
-- bokeh=0.10.0=py34_0
-- boto=2.38.0=py34_0
-- bottleneck=1.0.0=np19py34_0
-- certifi=2015.9.6.2=py34_0
-- cffi=1.2.1=py34_0
-- clyent=1.0.0=py34_0
-- colorama=0.3.3=py34_0
-- conda-build=1.18.1=py34_0
-- conda-env=2.4.4=py34_0
-- configobj=5.0.6=py34_0
-- cryptography=1.0.2=py34_0
-- curl=7.45.0=0
-- cython=0.23.4=py34_0
-- cytoolz=0.7.4=py34_0
-- datashape=0.4.7=py34_0
-- decorator=4.0.4=py34_0
-- docutils=0.12=py34_0
-- dynd-python=0.6.5=np19py34_0
-- fastcache=1.0.2=py34_0
-- flask=0.10.1=py34_1
-- fontconfig=2.11.1=5
-- freetype=2.5.5=0
-- funcsigs=0.4=py34_0
-- greenlet=0.4.9=py34_0
-- h5py=2.5.0=np19py34_3
-- hdf5=1.8.15.1=2
-- idna=2.0=py34_0
-- ipykernel=4.1.1=py34_0
-- ipython=4.0.0=py34_0
-- ipython-notebook=4.0.4=py34_0
-- ipython-qtconsole=4.0.1=py34_0
-- ipython_genutils=0.1.0=py34_0
-- itsdangerous=0.24=py34_0
-- jdcal=1.0=py34_0
-- jedi=0.9.0=py34_0
-- jinja2=2.8=py34_0
-- joblib=0.8.4=py34_0
-- jpeg=8d=0
-- jsonschema=2.4.0=py34_0
-- jupyter_client=4.1.1=py34_0
-- jupyter_core=4.0.6=py34_0
-- krb5=1.13.2=0
-- libdynd=0.6.5=0
-- libffi=3.0.13=0
-- libgfortran=1.0=0
-- libpng=1.6.17=0
-- libsodium=1.0.3=0
-- libtiff=4.0.6=0
+- _license=1.1=py35_1
+- _nb_ext_conf=0.3.0=py35_0
+- alabaster=0.7.9=py35_0
+- anaconda-clean=1.0.1=py35_0
+- anaconda-client=1.5.5=py35_0
+- anaconda=custom=py35_0
+- anaconda-navigator=1.3.2=py35_0
+- argcomplete=1.0.0=py35_1
+- astroid=1.4.7=py35_0
+- astropy=1.2.1=np111py35_0
+- babel=2.3.4=py35_0
+- backports=1.0=py35_0
+- beautifulsoup4=4.5.1=py35_0
+- bitarray=0.8.1=py35_0
+- bokeh=0.12.3=py35_0
+- boto=2.43.0=py35_0
+- bottleneck=1.1.0=np111py35_0
+- cairo=1.12.18=6
+- cffi=1.8.3=py35_0
+- chest=0.2.3=py35_0
+- click=6.6=py35_0
+- cloudpickle=0.2.1=py35_0
+- clyent=1.2.2=py35_0
+- colorama=0.3.7=py35_0
+- conda=4.2.13=py35_0
+- conda-build=2.0.10=py35_0
+- conda-env=2.6.0=0
+- conda-forge::deap=1.0.2.post2=py35_0
+- conda-forge::future=0.15.2=py35_0
+- conda-forge::jupyter_contrib_core=0.3.0=py35_0
+- conda-forge::jupyter_contrib_nbextensions=0.2.1=py35_0
+- conda-forge::jupyter_nbextensions_configurator=0.2.2=py35_0
+- conda-verify=2.0.0=py35_0
+- configobj=5.0.6=py35_0
+- contextlib2=0.5.4=py35_0
+- cryptography=1.5.3=py35_0
+- curl=7.49.0=1
+- cycler=0.10.0=py35_0
+- cython=0.25.1=py35_0
+- cytoolz=0.8.0=py35_0
+- dask=0.12.0=py35_0
+- datashape=0.5.2=py35_0
+- dbus=1.10.10=0
+- decorator=4.0.10=py35_0
+- dill=0.2.5=py35_0
+- docutils=0.12=py35_2
+- dynd-python=0.7.2=py35_0
+- entrypoints=0.2.2=py35_0
+- et_xmlfile=1.0.1=py35_0
+- expat=2.1.0=0
+- fastcache=1.0.2=py35_1
+- filelock=2.0.7=py35_0
+- flask=0.11.1=py35_0
+- flask-cors=2.1.2=py35_0
+- fontconfig=2.11.1=6
+- freetype=2.5.5=1
+- get_terminal_size=1.0.0=py35_0
+- gevent=1.1.2=py35_0
+- glib=2.43.0=1
+- greenlet=0.4.10=py35_0
+- gst-plugins-base=1.8.0=0
+- gstreamer=1.8.0=0
+- h5py=2.6.0=np111py35_2
+- harfbuzz=0.9.39=1
+- hdf5=1.8.17=1
+- heapdict=1.0.0=py35_1
+- icu=54.1=0
+- idna=2.1=py35_0
+- imagesize=0.7.1=py35_0
+- ipykernel=4.5.1=py35_0
+- ipython=5.1.0=py35_0
+- ipython_genutils=0.1.0=py35_0
+- ipywidgets=5.2.2=py35_0
+- itsdangerous=0.24=py35_0
+- jbig=2.1=0
+- jdcal=1.3=py35_0
+- jedi=0.9.0=py35_1
+- jinja2=2.8=py35_1
+- joblib=0.9.4=py35_0
+- jpeg=8d=2
+- jsonschema=2.5.1=py35_0
+- jupyter=1.0.0=py35_3
+- jupyter_client=4.4.0=py35_0
+- jupyter_console=5.0.0=py35_0
+- jupyter_core=4.2.0=py35_0
+- lazy-object-proxy=1.2.1=py35_0
+- libdynd=0.7.2=0
+- libffi=3.2.1=0
+- libgcc=5.2.0=0
+- libgfortran=3.0.0=1
+- libpng=1.6.22=0
+- libsodium=1.0.10=0
+- libtiff=4.0.6=2
+- libxcb=1.12=1
 - libxml2=2.9.2=0
 - libxslt=1.1.28=0
-- llvmlite=0.8.0=py34_0
-- lxml=3.4.4=py34_0
-- markupsafe=0.23=py34_0
-- matplotlib=1.4.3=np19py34_2
-- mistune=0.7.1=py34_0
-- mock=1.3.0=py34_0
-- multipledispatch=0.4.8=py34_0
-- nbconvert=4.0.0=py34_0
-- nbformat=4.0.1=py34_0
-- networkx=1.10=py34_0
-- nltk=3.1=py34_0
-- nose=1.3.7=py34_0
-- notebook=4.0.6=py34_0
-- numba=0.22.1=np19py34_0
-- numexpr=2.4.4=np19py34_0
-- numpy=1.9.3=py34_0
-- odo=0.3.4=py34_0
-- openblas=0.2.14=3
-- openpyxl=2.2.6=py34_0
-- openssl=1.0.2d=0
-- pandas=0.16.2=np19py34_0
-- patchelf=0.6=0
-- path.py=8.1.2=py34_0
-- patsy=0.4.0=np19py34_0
-- pbr=1.3.0=py34_0
-- pcre=8.31=0
-- pep8=1.6.2=py34_0
-- pexpect=3.3=py34_0
-- pickleshare=0.5=py34_0
-- pillow=3.0.0=py34_1
-- pip=7.1.2=py34_0
-- ply=3.8=py34_0
-- psutil=3.2.2=py34_0
-- ptyprocess=0.5=py34_0
-- py=1.4.30=py34_0
-- pyasn1=0.1.9=py34_0
-- pycosat=0.6.1=py34_0
-- pycparser=2.14=py34_0
-- pycrypto=2.6.1=py34_0
-- pycurl=7.19.5.1=py34_3
-- pyflakes=1.0.0=py34_0
-- pygments=2.0.2=py34_0
-- pyopenssl=0.15.1=py34_1
-- pyparsing=2.0.3=py34_0
-- pyqt=4.11.4=py34_0
-- pytables=3.2.2=np19py34_0
-- pytest=2.8.1=py34_0
-- python=3.4.3=2
-- python-dateutil=2.4.2=py34_0
-- pytz=2015.7=py34_0
-- pyyaml=3.11=py34_1
-- pyzmq=14.7.0=py34_1
-- qt=4.8.7=1
-- qtconsole=4.1.0=py34_0
+- llvmlite=0.14.0=py35_0
+- locket=0.2.0=py35_1
+- lxml=3.6.4=py35_0
+- markupsafe=0.23=py35_2
+- matplotlib=1.5.3=np111py35_1
+- mistune=0.7.3=py35_0
+- mkl=11.3.3=0
+- mkl-service=1.1.2=py35_2
+- mpmath=0.19=py35_1
+- multipledispatch=0.4.9=py35_0
+- nb_anacondacloud=1.2.0=py35_0
+- nb_conda=2.0.0=py35_0
+- nb_conda_kernels=2.0.0=py35_0
+- nbconvert=4.2.0=py35_0
+- nbformat=4.1.0=py35_0
+- nbpresent=3.0.2=py35_0
+- networkx=1.11=py35_0
+- nltk=3.2.1=py35_0
+- nose=1.3.7=py35_1
+- notebook=4.2.3=py35_0
+- numba=0.29.0=np111py35_0
+- numexpr=2.6.1=np111py35_1
+- numpy=1.11.2=py35_0
+- odo=0.5.0=py35_1
+- openblas=0.2.14=4
+- openpyxl=2.4.0=py35_0
+- openssl=1.0.2j=0
+- pandas=0.19.1=np111py35_0
+- partd=0.3.6=py35_0
+- patchelf=0.9=0
+- path.py=8.2.1=py35_0
+- pathlib2=2.1.0=py35_0
+- patsy=0.4.1=py35_0
+- pep8=1.7.0=py35_0
+- pexpect=4.0.1=py35_0
+- pickleshare=0.7.4=py35_0
+- pillow=3.4.2=py35_0
+- pip=9.0.1=py35_0
+- pixman=0.32.6=0
+- pkginfo=1.4.1=py35_0
+- ply=3.9=py35_0
+- prompt_toolkit=1.0.9=py35_0
+- psutil=5.0.0=py35_0
+- ptyprocess=0.5.1=py35_0
+- py=1.4.31=py35_0
+- pyasn1=0.1.9=py35_0
+- pycosat=0.6.1=py35_1
+- pycparser=2.17=py35_0
+- pycrypto=2.6.1=py35_4
+- pycurl=7.43.0=py35_0
+- pyflakes=1.3.0=py35_0
+- pygments=2.1.3=py35_0
+- pylint=1.5.4=py35_1
+- pyopenssl=16.2.0=py35_0
+- pyparsing=2.1.4=py35_0
+- pyqt=5.6.0=py35_0
+- pytest=3.0.4=py35_0
+- python=3.5.2=0
+- python-dateutil=2.6.0=py35_0
+- pytz=2016.7=py35_0
+- pyyaml=3.12=py35_0
+- pyzmq=16.0.1=py35_0
+- qt=5.6.0=1
+- qtawesome=0.3.3=py35_0
+- qtconsole=4.2.1=py35_1
+- qtpy=1.1.2=py35_0
 - readline=6.2=2
-- redis=2.6.9=0
-- redis-py=2.10.3=py34_0
-- requests=2.8.1=py34_0
-- rope=0.9.4=py34_1
-- runipy=0.1.3=py34_0
-- scikit-image=0.11.3=np19py34_0
-- scikit-learn=0.16.1=np19py34_0
-- scipy=0.16.0=np19py34_1
-- setuptools=18.4=py34_0
-- simplegeneric=0.8.1=py34_0
-- sip=4.16.9=py34_0
-- six=1.10.0=py34_0
-- snowballstemmer=1.2.0=py34_0
-- sockjs-tornado=1.0.1=py34_0
-- sphinx=1.3.1=py34_0
-- sphinx_rtd_theme=0.1.7=py34_0
-- spyder=2.3.7=py34_1
-- spyder-app=2.3.7=py34_0
-- sqlalchemy=1.0.9=py34_0
-- sqlite=3.8.4.1=1
-- statsmodels=0.6.1=np19py34_0
-- swig=3.0.2=0
-- sympy=0.7.6.1=py34_0
-- system=5.8=2
-- terminado=0.5=py34_1
-- theano=0.7.0=np19py34_0
+- redis=3.2.0=0
+- redis-py=2.10.5=py35_0
+- requests=2.12.1=py35_0
+- rope=0.9.4=py35_1
+- ruamel_yaml=0.11.14=py35_0
+- scikit-image=0.12.3=np111py35_1
+- scikit-learn=0.18.1=np111py35_0
+- scipy=0.18.1=np111py35_0
+- setuptools=27.2.0=py35_0
+- simplegeneric=0.8.1=py35_1
+- singledispatch=3.4.0.3=py35_0
+- sip=4.18=py35_0
+- six=1.10.0=py35_0
+- snowballstemmer=1.2.1=py35_0
+- sockjs-tornado=1.0.3=py35_0
+- sphinx=1.4.8=py35_0
+- spyder=3.0.1=py35_0
+- sqlalchemy=1.1.4=py35_0
+- sqlite=3.13.0=0
+- statsmodels=0.6.1=np111py35_1
+- sympy=1.0=py35_0
+- terminado=0.6=py35_0
 - tk=8.5.18=0
-- toolz=0.7.4=py34_0
-- tornado=4.2.1=py34_1
-- traitlets=4.0.0=py34_0
-- ujson=1.33=py34_0
-- util-linux=2.21=0
-- werkzeug=0.10.4=py34_0
-- wheel=0.26.0=py34_1
-- xlrd=0.9.4=py34_0
-- xlsxwriter=0.7.7=py34_0
-- xlwt=1.0.0=py34_0
-- xz=5.0.5=0
+- toolz=0.8.0=py35_0
+- tornado=4.4.2=py35_0
+- traitlets=4.3.1=py35_0
+- unicodecsv=0.14.1=py35_0
+- wcwidth=0.1.7=py35_0
+- werkzeug=0.11.11=py35_0
+- wheel=0.29.0=py35_0
+- widgetsnbextension=1.2.6=py35_0
+- wrapt=1.10.8=py35_0
+- xlrd=1.0.0=py35_0
+- xlsxwriter=0.9.3=py35_0
+- xlwt=1.1.2=py35_0
+- xz=5.2.2=0
 - yaml=0.1.6=0
-- zeromq=4.1.3=0
-- zlib=1.2.8=0
+- zeromq=4.1.5=0
+- zlib=1.2.8=3
 - pip:
-  - beautifulsoup4==4.3.2
-  - blaze==0.8.3
-  - cma==1.1.6
-  - deap==1.1.0
+  - backports.shutil-get-terminal-size==1.0.0
+  - dynd==0.7.3.dev1
+  - et-xmlfile==1.0.1
   - ipython-genutils==0.1.0
-  - jupyter-client==4.1.1
-  - jupyter-core==4.0.6
-  - rope-py3k-0.9.4==1
-  - scoop==0.7.1.1
-  - sphinx-rtd-theme==0.1.7
-  - tables==3.2.2
-  - yapf==0.3.0
+  - jupyter-client==4.4.0
+  - jupyter-console==5.0.0
+  - jupyter-contrib-core==0.3.0
+  - jupyter-contrib-nbextensions==0.2.1
+  - jupyter-core==4.2.0
+  - jupyter-nbextensions-configurator==0.2.2
+  - nb-anacondacloud==1.2.0
+  - nb-conda==2.0.0
+  - nb-conda-kernels==2.0.0
+  - prompt-toolkit==1.0.9
+  - rope-py3k==0.9.4.post1
+  - ruamel-yaml-==VERSION
+prefix: /opt/anaconda3
 
